@@ -1692,7 +1692,6 @@ constFold (iCode * ic, set * cseSet)
   return 1;
 }
 
-#if 0
 /* Remove casts to bool from results of logical operations. */
 static int
 boolCast (iCode * ic, set * cseSet)
@@ -1718,8 +1717,8 @@ boolCast (iCode * ic, set * cseSet)
       dic->op != AND_OP &&
       dic->op != OR_OP &&
       dic->op != GETHBIT &&
-      dic->op != GETABIT &&
-      !(dic->op == BITWISEAND && (IS_BOOL ( operandType (IC_LEFT (ic))) || IS_BOOL ( operandType (IC_RIGHT (ic)))))
+      dic->op != GETABIT /*&&
+      !(dic->op == BITWISEAND && (IS_BOOL ( operandType (IC_LEFT (ic))) || IS_BOOL ( operandType (IC_RIGHT (ic))))) Triggers bug #3223041*/
      )
     {
       return 0;
@@ -1730,7 +1729,6 @@ boolCast (iCode * ic, set * cseSet)
 
   return 0;
 }
-#endif
 
 /*-----------------------------------------------------------------*/
 /* deleteGetPointers - called when a pointer is passed as parm     */
@@ -2061,8 +2059,7 @@ cseBBlock (eBBlock * ebb, int computeOnly, ebbIndex * ebbi)
           /* do some algebraic optimizations if possible */
           algebraicOpts (ic, ebb);
           while (constFold (ic, cseSet));
-//          triggers bug 3223041
-//          while (boolCast (ic, cseSet));
+          while (boolCast (ic, cseSet));
         }
 
       /* small kludge */
